pkg/controller/appdefinition/testdata/ingress/clusterdomainport/expected.yaml.d/appinstance.yaml
kind: AppInstance
apiVersion: internal.acorn.io/v1
metadata:
  uid: 1234567890abcdef
  name: app-name
  namespace: app-namespace
spec:
  image: test
status:
  namespace: app-created-namespace
  appImage:
    id: test
  appSpec:
    containers:
      oneimage:
        ports:
          - port: 80
            targetPort: 81
            publish: true
            protocol: http
        image: "image-name"
        build:
          dockerfile: "Dockerfile"
          context: "."
  conditions:
    - type: defined
      reason: Success
      status: "True"
      success: true
