pkg/controller/appdefinition/testdata/ingress/clusterdomainport/expected.yaml.d/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "oneimage"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "oneimage"
        "acorn.io/managed": "true"
        "acorn.io/root-prefix": "app-name"
        "acorn.io/root-namespace": "app-namespace"
        "port-number.acorn.io/81": "true"
        "service-name.acorn.io/oneimage": "true"
      annotations:
        acorn.io/container-spec: '{"build":{"context":".","dockerfile":"Dockerfile"},"image":"image-name","ports":[{"port":80,"protocol":"http","publish":true,"targetPort":81}]}'
    spec:
      terminationGracePeriodSeconds: 5
      hostname: oneimage
      enableServiceLinks: false
      serviceAccountName: acorn
      imagePullSecrets:
        - name: oneimage-pull-1234567890ab
      containers:
        - name: oneimage
          image: "image-name"
          readinessProbe:
            tcpSocket:
              port: 81
          ports:
          - containerPort: 81
            protocol: "TCP"
