pkg/controller/appdefinition/testdata/ingress/clusterdomainport/expected.yaml.d/service.yaml
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
spec:
  appName: app-name
  appNamespace: app-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
  container: oneimage
  default: true
  ports:
    - port: 80
      targetPort: 81
      publish: true
      protocol: http
      name: "80"
