pkg/controller/appdefinition/testdata/ingress/clusterdomainport/expected.yaml.d/serviceaccount.yaml
kind: ServiceAccount
apiVersion: v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/container-name: oneimage
